--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -105,46 +105,52 @@
 @media(max-width:768px){
     .contact{
         gap: 50px;
-        margin: 50px 70px;
+        margin: 20px 30px;
         align-items: start;
     }
     .contact-title h1{
         padding: 0;
-        font-size: 50px;
+        font-size: 35px;
         font-weight: 600;
     }
     .contact-title img{
-        width: 130px;
+        width: 80px;
         margin-right: -20px;
     }
     .contact-section{
         flex-direction: column;
     }
     .contact-left h1{
-        font-size: 54px;
+        font-size: 30px;
     }
     .contact-left p{
-        font-size: 18px;
+        font-size: 15px;
     }
     .contact-detail{
         gap: 20px;
     }
+    .contact-detail p{
+        font-size: 13px;
+    }
     .contact-detail img{
-        width: 25px;
+        width: 15px;
+    }
+    .contact-section{
+        gap: 100px;
     }
     .contact-right label{
-        font-size: 18px;
+        font-size: 16px;
     }
     .contact-right input{
-        width: 100%;
-        font-size: 18px;
+        width: 96%;
+        font-size: 15px;
     }
     .contact-right textarea{
-        width: 95%;
-        font-size: 18px;
+        width: 89%;
+        font-size: 15px;
     }
     .contact-submit{
-        font-size: 18px;
-        padding: 15px 40px;
+        font-size: 15px;
+        padding: 10px 15px;
     }
 }
