--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -35,7 +35,14 @@
 
 @media(max-width:768px){
     .footer{
-        margin: 50px 70px;
+        margin: 20px 30px;
+    }
+    .footer-top-left img{
+        width: 80px;
+        height: 30px;
+    }
+    .footer-top-left p{
+        font-size: 15px;
     }
     .footer-top{
         flex-direction: column;
@@ -45,5 +52,11 @@
         display: flex;
         flex-direction: column-reverse;
         margin-bottom: 50px;
+    }
+    .footer-bottom-right p{
+        font-size: 14px;
+    }
+    .footer-bottom-left{
+        font-size: 12px;
     }
 }
