--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -59,19 +59,22 @@
 }
 @media (max-width: 768px) {
   .hero img {
-    margin-top: 120px;
+    margin-top: 100px;
     width: 260px;
   }
   .hero h1 {
-    margin-top: 50px;
+    margin-top: 40px;
     width: 90%;
-    font-size: 50px;
+    font-size: 40px;
   }
   .hero p {
     width: 60%;
-    font-size: 18px;
+    font-size: 15px;
     line-height: 32px;
     margin: 10px 0px;
+  }
+  .anchor-link{
+    font-size: 15px;
   }
   .hero-action {
     gap: 16px;
@@ -80,11 +83,12 @@
     margin-bottom: 50px;
   }
   .hero-connect {
-    padding: 20px 30px;
+    padding: 10px 5px;
     border-radius: 40px;
   }
   .hero-resume {
-    padding: 20px 30px;
+    padding: 10px 5px;
     border-radius: 40px;
+    font-size: 15px;
   }
 }
