--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -57,20 +57,20 @@
 @media(max-width:768px){
     .mywork{
         gap: 50px;
-        margin: 50px;
+        margin: 30px;
         align-items: start;
     }
     .mywork-title h1{
         padding: 0;
-        font-size: 50px;
+        font-size: 35px;
         font-weight: 600;
     }
     .mywork-title img{
-        width: 130px;
+        width: 80px;
         margin-right: -20px;
     }
     .mywork-container{
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         gap: 30px;
     }
     .mywork-container img{
@@ -78,9 +78,12 @@
         height: 100%;
     }
     .mywork_showmore{
-        padding: 20px 40px;
-        font-size: 18px;
+        padding: 10px 5px;
+        font-size: 15px;
         margin: 50px auto;
         cursor: pointer;
+    }
+    .mywork_showmore img{
+        height: 15px;
     }
 }
