--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -43,6 +43,7 @@
 .anchor-link{
     text-decoration: none;
     color: white;
+    font-size: 20px;
 }
 .nav-mob-close{
     display: none;
@@ -52,8 +53,13 @@
 }
 @media(max-width:768px){
     .navbar{
-        margin: 20px 50px;
+        margin: 20px 30px;
     }
+    .logo{
+        width: 80px;
+        height: 30px;
+    }
+
     .nav-connect{
         display: none;
     }
@@ -61,13 +67,14 @@
         display: block;
         position: fixed;
         right: 30px;
+        width: 25px;
     }
     .nav-mob-close{
         display: block;
         position: relative;
         top: 30px;
         left: 290px;
-        width: 30px;
+        width: 25px;
     }
     .nav-menu{
         position: fixed;
